--- a/in dex.html
+++ b/in dex.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript basics</title>
+  <meta charset="UTF-8">
+  <title>JS inside HTML</title>
 </head>
 <body>
-    
+  <h1>Hello!</h1>
+  <script src="./questions.js"></script>
 </body>
 </html>
