--- a/in dex.html
+++ b/in dex.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS inside HTML</title>
+  <title>Assignment 07</title>
 </head>
 <body>
-  <h1>Hello!</h1>
+  <h1>Open the Console to See Output</h1>
+
+  <!-- Link to JavaScript -->
   <script src="./questions.js"></script>
 </body>
 </html>
